mongodb/mongodb-deployment.yaml
apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
    name: "mongo-db"
spec:
  selector:
    matchLabels:
      app: "mongo-db"
  replicas: 1
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: "mongo-db"
    spec:
      containers:
        -
          name: "mongo-db"
          image: "mongo"
          imagePullPolicy: "Always"
          ports:
            -
              containerPort: 27017
              name: "mongodb"
          volumeMounts:
            -
              name: "mongodb-persistent-storage"
              mountPath: "/data/db"
      volumes:
        -
          name: "mongodb-persistent-storage"
          persistentVolumeClaim:
            claimName: "mongo-data"
