mongodb/mongodb-statefulset.yaml
apiVersion: "apps/v1"
kind: "StatefulSet"
metadata:
  name: "mongo-db"
  namespace: "default"
spec:
  selector:
    matchLabels:
      app: "mongo-db"
  replicas: 1
  template:
    metadata:
      labels:
        app: "mongo-db"
    spec:
      containers:
        -
          name: "mongo-db"
          image: "mongo:4.4.18"
          imagePullPolicy: "IfNotPresent"
          ports:
            -
              containerPort: 27017
              name: "mongodb"
          volumeMounts:
            -
              name: "mongodb-persistent-storage"
              mountPath: "/data/db"
      volumes:
        -
          name: "mongodb-persistent-storage"
          persistentVolumeClaim:
            claimName: "mongodb-pvc"
