mongodb/mongodb-nodeport-svc.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "mongo-db"
  namespace: "default"
  labels:
    app: "mongo-db"
spec:
  ports:
    -
      name: "mongodb"
      port: 27017
      nodePort: 30012
  type: "NodePort"
  selector:
    app: "mongo-db"
